@@ -2,12 +2,13 @@
 
 #include <set>
 #include <iostream>
-//#include <libconfig.h++>
+#include <unicode/unistr.h>
 #include <algorithm>
 
 Renamer::Renamer()
 	: keep_dir_structure {false}
 	, copy_or_rename {CopyOrRename::copy}
+	, sort_mode {SortMode::sic}
 {
 
 }
@@ -37,6 +38,11 @@ void	Renamer::setKeepDirStructure(bool keep)
 void	Renamer::setCopyOrRename(CopyOrRename mode)
 {
 	copy_or_rename = mode;
+}
+
+void	Renamer::setSortMode(SortMode mode)
+{
+	sort_mode = mode;
 }
 
 
@@ -84,7 +90,7 @@ void	Renamer::addReplaceRule(const std::string& what, const std::string& to)
 
 
 
-fs::path Renamer::applyRulesToOneRelativeFilename(fs::path absolute_path, fs::path relative_path)
+fs::path Renamer::applyRulesToOneFilename(const fs::path& _relative_path)
 {
 	std::string new_filename;
 
@@ -103,26 +109,27 @@ fs::path Renamer::applyRulesToOneRelativeFilename(fs::path absolute_path, fs::pa
 			}break;
 			case RuleType::Integer:
 			{
-				static_cast<RuleInteger*>(rule)->process(relative_path);
+				static_cast<RuleInteger*>(rule)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Dir:
 			{
-				static_cast<RuleDir*>(rule)->process(relative_path);
+				static_cast<RuleDir*>(rule)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Extension:
 			{
-				static_cast<RuleExtension*>(rule)->process(relative_path);
+				static_cast<RuleExtension*>(rule)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Filename:
 			{
-				static_cast<RuleFilename*>(rule)->process(relative_path);
+				static_cast<RuleFilename*>(rule)->process(_relative_path);
 				new_filename += rule->getString();
 			}break;
 			case RuleType::Filesize:
 			{
+				fs::path absolute_path(source_dir / _relative_path);
 				static_cast<RuleFilesize*>(rule)->process(absolute_path);
 				new_filename += rule->getString();
 			}break;
@@ -137,48 +144,44 @@ fs::path Renamer::applyRulesToOneRelativeFilename(fs::path absolute_path, fs::pa
 	return fs::path(new_filename);
 }
 
-void Renamer::createRenameBijectionMap()
+void Renamer::createRenameBijection()
 {
-	// We want some sorting first
-	std::vector<std::filesystem::path> files_in_directory;
-	std::copy(std::filesystem::recursive_directory_iterator(source_dir), std::filesystem::recursive_directory_iterator(), std::back_inserter(files_in_directory));
-	std::sort(files_in_directory.begin(), files_in_directory.end());
+	// Get our directories in the array
+	getSourceFilenames(rename_vector, source_dir);
+	sortSourceFilenames(rename_vector, sort_mode);
 
 
-
-	for (const std::filesystem::path& dir_entry : files_in_directory)
+	for (auto& pair : rename_vector)
 	{
-		if (!std::filesystem::is_directory(dir_entry))
+		const std::filesystem::path& dir_entry = pair.first;
+		fs::path absolute_file_path_source = dir_entry;
+		fs::path relative_file_path_source = fs::relative(absolute_file_path_source, source_dir);
+
+		fs::path new_name = applyRulesToOneFilename(relative_file_path_source);
+
+		fs::path relative_file_path_without_filename = relative_file_path_source;
+		relative_file_path_without_filename.remove_filename();
+		fs::path absolute_file_path_destination = destination_dir;
+		if (keep_dir_structure)
 		{
-			fs::path absolute_file_path_source = dir_entry;
-			fs::path relative_file_path_source = fs::relative(absolute_file_path_source, source_dir);
-
-			fs::path new_name = applyRulesToOneRelativeFilename(absolute_file_path_source, relative_file_path_source);
-
-			fs::path relative_file_path_without_filename = relative_file_path_source;
-			relative_file_path_without_filename.remove_filename();
-			fs::path absolute_file_path_destination = destination_dir;
-			if (keep_dir_structure)
-			{
-				absolute_file_path_destination /= relative_file_path_without_filename;
-			}
-			absolute_file_path_destination /= new_name;
-
-			rename_map[absolute_file_path_source] = absolute_file_path_destination;
+			absolute_file_path_destination /= relative_file_path_without_filename;
 		}
+		absolute_file_path_destination /= new_name;
+
+		pair.second = absolute_file_path_destination;
 	}
 }
 
-void Renamer::testRenameBijectionMap()
+void Renamer::testRenameBijection()
 {
 	std::map<fs::path, fs::path> result;
-	auto starting_point = rename_map.begin();
+	auto starting_point = rename_vector.begin();
 	auto runner = starting_point;
-	while (starting_point != rename_map.end())
+	while (starting_point != rename_vector.end())
 	{
 		runner = starting_point;
 		runner++;
-		while (runner != rename_map.end())
+		while (runner != rename_vector.end())
 		{
 			if ((*runner).second == (*starting_point).second)
 			{
@@ -202,13 +205,13 @@ void Renamer::testRenameBijectionMap()
 
 }
 
-void Renamer::executeRenameBijectionMap()
+void Renamer::executeRenameBijection()
 {
 	switch (copy_or_rename)
 	{
 		case CopyOrRename::copy:
 		{
-			for (auto& element: rename_map)
+			for (auto& element: rename_vector)
 			{
 				fs::path dest_dir = element.second;
 				dest_dir.remove_filename();
@@ -218,7 +221,7 @@ void Renamer::executeRenameBijectionMap()
 		}break;
 		case CopyOrRename::rename:
 		{
-			for (auto& element: rename_map)
+			for (auto& element: rename_vector)
 			{
 				fs::path dest_dir = element.second;
 				dest_dir.remove_filename();
@@ -230,10 +233,61 @@ void Renamer::executeRenameBijectionMap()
 
 }
 
-void  Renamer::printRenameBijectionMap()
+void  Renamer::printRenameBijection()
 {
-	for (auto& element: rename_map)
+	for (auto& element: rename_vector)
 	{
 		std::cout << "╒════════════\n│" << element.first << "\n│" << element.second << "\n╘════════════\n";
 	}
 }
+
+void Renamer::getSourceFilenames(std::vector<std::pair<fs::path, fs::path>>& rename_vector, const fs::path&	dir)
+{
+	for (const fs::directory_entry& dir_entry : fs::recursive_directory_iterator(dir))
+	{
+		if (!std::filesystem::is_directory(dir_entry))
+		{
+			rename_vector.push_back(std::pair(dir_entry, ""));
+		}
+	}
+}
+
+void Renamer::sortSourceFilenames(std::vector<std::pair<fs::path, fs::path>>& rename_vector, SortMode sort_mode)
+{
+	switch (sort_mode)
+	{
+		case SortMode::sic:
+		{
+			// Well, sorting isn't needed.
+		}
+		break;
+		case SortMode::az:
+		case SortMode::za:
+		{
+			std::vector<icu::UnicodeString> icu_str_vector;
+			for (auto& path: rename_vector)
+			{
+				icu_str_vector.push_back(icu::UnicodeString(path.first.c_str()));
+			}
+
+			if (sort_mode == SortMode::az)
+			{
+				std::sort(icu_str_vector.begin(), icu_str_vector.end(), [](icu::UnicodeString a, icu::UnicodeString b) {return a < b;});
+			}else
+			if (sort_mode == SortMode::za)
+			{
+				std::sort(icu_str_vector.begin(), icu_str_vector.end(), [](icu::UnicodeString a, icu::UnicodeString b) {return a > b;});
+			}
+
+			size_t vector_size =  rename_vector.size();
+			for (size_t counter = 0; counter < vector_size; counter++)
+			{
+				std::string path;
+				icu_str_vector[counter].toUTF8String(path);
+				rename_vector[counter].first = path;
+			}
+		}
+		break;
+	}
+}
+
