@@ -13,13 +13,17 @@ class Renamer
 {
 public:
 	enum class CopyOrRename{copy, rename};
+	enum class SortMode{sic, az, za};
 	Renamer();
 	~Renamer();
 	////////////////////
+
 	void	setPaths(const std::string& source, const std::string& destination);
 	void	setKeepDirStructure(bool keep);
 	void	setCopyOrRename(CopyOrRename mode);
+	void	setSortMode(SortMode mode);
 	////////////////////
+
 	void	addDateRule(const std::string& format);
 	void	addTextRule(const std::string& text);
 	void	addDirRule(RuleDir::Mode mode, const std::string& separator);
@@ -30,11 +34,11 @@ public:
 	void	addReplaceRule(const std::string& what, const std::string& to);
 	////////////////////
 
-	fs::path applyRulesToOneRelativeFilename(fs::path absolute_path, fs::path relative_path);
-	void createRenameBijectionMap();
-	void testRenameBijectionMap();
-	void executeRenameBijectionMap();
-	void printRenameBijectionMap();
+	fs::path applyRulesToOneFilename(const fs::path& relative_path);
+	void createRenameBijection();
+	void testRenameBijection();
+	void executeRenameBijection();
+	void printRenameBijection();
 
 
 private:
@@ -42,8 +46,12 @@ private:
 	fs::path		destination_dir;
 	bool			keep_dir_structure;
 	CopyOrRename	copy_or_rename;
+	SortMode		sort_mode;
 	std::vector<RuleBase*> rules;
-	std::map<fs::path /*source*/, fs::path /*destination*/> rename_map;
+	std::vector<std::pair<fs::path, fs::path>> rename_vector;
+
+	void getSourceFilenames(std::vector<std::pair<fs::path, fs::path>>& rename_vector, const fs::path&	source_dir);
+	void sortSourceFilenames(std::vector<std::pair<fs::path, fs::path>>& rename_vector, SortMode sort_mode);
 };
 
 #endif // RENAMER_H
